[package]
name = "new-year-greetings"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde_json = "1.0.89"
unsplash-api = "0.1.0"
http-api-client-endpoint = "0.2.0"
image = "0.24.5"
random-string = "1.0.0"
